ibuilder/tests/not_compile/many_fields_struct.stderr
error: structs with unnamed fields must have only one field
 --> $DIR/many_fields_struct.rs:4:8
  |
4 | struct Foo(i64, String);
  |        ^^^
