ibuilder/tests/not_compile/many_fields_struct.rs
use ibuilder::*;

#[derive(IBuilder)]
struct Foo(i64, String);

fn main() {
    Foo::builder();
}
